--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "postcss": "^8.4.24",
         "pre-commit": "^1.2.2",
         "tailwindcss": "^3.3.2",
+        "type-fest": "^4.0.0",
         "typescript": "^4.9.5"
     },
     "pre-commit": [
