--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "gatsby": "^5.10.0",
         "gatsby-plugin-image": "^3.10.0",
         "gatsby-plugin-sharp": "^5.10.0",
+        "gatsby-remark-prismjs": "github:1574242600/gatsby-remark-prismjs",
         "gatsby-source-filesystem": "^5.10.0",
         "gatsby-transformer-json": "^5.10.0",
+        "gatsby-transformer-remark": "^6.11.0",
         "gatsby-transformer-sharp": "^5.10.0",
+        "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "throttle-debounce": "^5.0.0"
